<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:text="@string/welcomeMessage"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/movieTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:elevation="0dp"
        android:text="@string/movieTitle"
        android:textAlignment="center" />

    <Button
        android:id="@+id/theater"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/theater" />

    <Button
        android:id="@+id/showtime"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/showtime" />

    <Button
        android:id="@+id/concessionButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/black"
        android:text="@string/concessionButton"
        android:textColor="@android:color/background_light" />

</LinearLayout>