<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConcessionChoice"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/choiceMessage"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/cinemarkMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/cinemarkMenu"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/regalMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/regalMenu"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/tavernMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/movieTavern"
        android:textColor="@android:color/background_light" />
</LinearLayout>