<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/selectTime"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/selectTime" />

    <Button
        android:id="@+id/selectDate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/selectDate" />

    <Button
        android:id="@+id/startSearch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:text="@string/startSearch" />
</LinearLayout>
